--- a/n-puzzle/Makefile
+++ b/n-puzzle/Makefile
@@ -6,7 +6,7 @@
 #    By: jkauppi <jkauppi@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/21 11:50:38 by jkauppi           #+#    #+#              #
-#    Updated: 2021/06/02 14:13:53 by jkauppi          ###   ########.fr        #
+#    Updated: 2021/06/03 14:31:57 by jkauppi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -86,6 +86,7 @@ SRC_C_FILES		=	loging_parameters.c arg_parser.c puzzle_map_1.c \
 					dfs.c dfs_rand.c dfs_deeping.c dfs_deeping_mem.c \
 					puzzle_status_1.c puzzle_status_2.c bfs.c bfs_1.c \
 					alg_toop.c alg_toop_1.c \
+					alg_n_puzzle_search.c \
 					open_set.c \
 					alg_a_star.c distance_taxicab.c \
 					alg_ida_star.c
