--- a/n-puzzle/lib/libft_addons/Makefile
+++ b/n-puzzle/lib/libft_addons/Makefile
@@ -6,7 +6,7 @@
 #    By: jkauppi <jkauppi@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/21 11:50:38 by jkauppi           #+#    #+#              #
-#    Updated: 2021/05/20 13:11:49 by jkauppi          ###   ########.fr        #
+#    Updated: 2021/06/03 17:18:21 by jkauppi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -45,7 +45,8 @@ SRC_C_FILES		=	ft_radian.c ft_max_int.c ft_min_int.c \
 					ft_enqueue.c ft_dequeue.c ft_is_queue_empty.c \
 					ft_queue_init.c \
 					ft_bt_instert.c ft_bt_print.c ft_bt_find.c ft_bt_remove.c \
-					ft_prio_enqueue.c ft_prio_dequeue.c ft_print_memory.c
+					ft_prio_enqueue.c ft_prio_dequeue.c ft_print_memory.c \
+					ft_open_fd.c
 SRC_H_FILES		=	libft_addons.h
 
 # Path folders for H, C, O and APP files
