--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ chronograf-storage
 influxdb-storage
 grafana-storage
 snuids-grafana-radar-panel-34713c1
+n-puzzle/N-Puzzle.srctrlbm
+n-puzzle/N-Puzzle.srctrldb
+n-puzzle/N-Puzzle.srctrlprj
