ida* --> ida. a_star_t --> a. Improved printout for unsolvable.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,14 +17,14 @@
 // 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
 // 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_22_2.map"],
 // 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
-// 			// "args": ["-L", "2", "-A", "a_star_t", "<", "${workspaceFolder}/n-puzzle/data/5_5_05.map"],
-// 			// "args": ["-L", "2", "-A", "a_star_t", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
-// 			// "args": ["-L", "2", "-A", "a_star_t", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
-// 			"args": ["-L", "2", "-A", "ida*", "-H", "l", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
-// 			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_10.map"],
-// 			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/4_4_Not_Solvable_01.map"],
-// 			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data"],
-// 			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/Empty.map"],
+// 			// "args": ["-L", "2", "-A", "a", "<", "${workspaceFolder}/n-puzzle/data/5_5_05.map"],
+// 			// "args": ["-L", "2", "-A", "a", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+// 			// "args": ["-L", "2", "-A", "a", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
+// 			"args": ["-L", "2", "-A", "ida", "-H", "l", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+// 			// "args": ["-L", "2", "-A", "ida", "<", "${workspaceFolder}/n-puzzle/data/3_3_10.map"],
+// 			// "args": ["-L", "2", "-A", "ida", "<", "${workspaceFolder}/n-puzzle/data/4_4_Not_Solvable_01.map"],
+// 			// "args": ["-L", "2", "-A", "ida", "<", "${workspaceFolder}/n-puzzle/data"],
+// 			// "args": ["-L", "2", "-A", "ida", "<", "${workspaceFolder}/n-puzzle/data/Empty.map"],
 // 			"stopAtEntry": false,
 // 			"cwd": "${workspaceFolder}/n-puzzle",
 // 			"environment": [],
@@ -55,7 +55,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
-			"args": ["-L", "2", "-A", "ida*"],
+			"args": ["-L", "2", "-A", "ida"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}/n-puzzle",
 			"environment": [],
