--- a/n-puzzle/Makefile
+++ b/n-puzzle/Makefile
@@ -6,7 +6,7 @@
 #    By: jkauppi <jkauppi@student.hive.fi>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/08/21 11:50:38 by jkauppi           #+#    #+#              #
-#    Updated: 2021/06/17 10:10:03 by jkauppi          ###   ########.fr        #
+#    Updated: 2021/06/18 13:22:38 by jkauppi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -69,8 +69,10 @@ endif
 OS				=	$(shell uname -s)
 ifeq ($(OS), Darwin)
 	D_ATTRIBUTES	=	-D DARWIN
-	MAC_INCLUDES	=	-I /Users/jkauppi/.brew/Cellar/openssl@1.1/1.1.1k/include
-	MAC_LD_FLAGS	=	-L/Users/jkauppi/.brew/Cellar/openssl@1.1/1.1.1k/lib
+	MAC_INCLUDES	=	-I $(HOME)/.brew/Cellar/openssl@1.1/1.1.1h/include
+	MAC_INCLUDES	+=	-I $(HOME)/.brew/Cellar/openssl@1.1/1.1.1k/include
+	MAC_LD_FLAGS	=	-L$(HOME)/.brew/Cellar/openssl@1.1/1.1.1h/lib
+	MAC_LD_FLAGS	+=	-L$(HOME)/.brew/Cellar/openssl@1.1/1.1.1k/lib
 endif
 
 # Application specific parameters
